--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "bddff93e-315a-4f57-a84c-5c46674f3d29"
 authors = ["Lilith Hafner <Lilith.Hafner@gmail.com> and contributors"]
 version = "0.0.0"
 
+[deps]
+Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+Graphics = "a2bd30eb-e257-5431-a919-1863eab51364"
+Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+
 [compat]
 julia = "1"
 
