stop runing CI on ubuntu because the CI machine is headless so Gtk errors on load
manual test passed on ubuntu with julia version 1.5.3, so lowering minimum julia version to that as well, but still testing on lts

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,7 +22,7 @@ jobs:
           - '1'
           - 'nightly'
         os:
-          - ubuntu-latest
+          # - ubuntu-latest No display available so Gtk errors on load
           - macOS-latest
           - windows-latest
         arch:
@@ -42,7 +42,7 @@ jobs:
           files: lcov.info
   docs:
     name: Documentation
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
     permissions:
       contents: write
     steps:
